fixing overflow container issue
can still see body overflow. try fixing issue by applying overflow hidden to containers instead of body

--- a/css-folder/style.css
+++ b/css-folder/style.css
@@ -352,6 +352,11 @@ MEDIA QUERIES
     overflow-x: hidden;
   }
   
+  .container{
+    width: 100vw;
+    overflow-x: hidden;
+  }
+  
   .no-scroll{
     position: fixed;
   }
